[gd_scene load_steps=4 format=2]

[ext_resource path="res://default_styleboxtexture.tres" type="StyleBox" id=1]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Controls.gd" type="Script" id=3]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 3 )

[node name="Holder" type="Label" parent="."]
margin_left = 11.0
margin_top = 30.0
margin_right = 505.0
margin_bottom = 273.0
theme = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
text = "Keyboard Controls:"
align = 1

[node name="RebindingStuff" type="Node2D" parent="Holder"]

[node name="OkButton" type="Button" parent="Holder"]
margin_left = 189.0
margin_top = 223.0
margin_right = 300.0
margin_bottom = 238.0
text = "Ok"

[node name="SwapButton" type="Button" parent="Holder"]
margin_left = 5.0
margin_top = 223.0
margin_right = 116.0
margin_bottom = 238.0
text = "Controller Controls"

[node name="ResetButton" type="Button" parent="Holder"]
margin_left = 378.0
margin_top = 223.0
margin_right = 489.0
margin_bottom = 238.0
text = "Reset to Defaults"

[node name="Pointer" type="Sprite" parent="Holder"]
